<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_gz_bringup</name>
  <version>1.0.0</version>

  <description>Bringup package for Rover Gazebo simulation in ROS 2</description>

    <maintainer email="damien.vivet@isae.Fr">ISAE-SUPAERO</maintainer>
    <license>MIT</license>
    <author email="damien.vivet@isae.Fr">Damien Vivet</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <exec_depend>leo_description</exec_depend>
  <exec_depend>scout_description</exec_depend>
  <exec_depend>ouster_description</exec_depend>
  <exec_depend>zed2_description</exec_depend>

  <exec_depend>rover_gz_plugins</exec_depend>
  <exec_depend>rover_gz_worlds</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- <test_depend>ament_cmake_black</test_depend> -->
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <!-- <test_depend>ament_cmake_mypy</test_depend> -->
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>