<?xml version="1.0"?>
<package format="3">
  <name>zed2_description</name>
  <version>1.0.7</version>
  <description>
    URDF and meshes describing Zed2 camera.
  </description>

  <maintainer email="damien.vivet@isae.fr">D. Vivet</maintainer>
  <author email="damien.vivet@isae.fr">D. Vivet</author>
  <author email="damien.vivet@isae.fr">D. Vivet</author>


  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

