<?xml version="1.0"?>
<package format="3">
  <name>leo_erc_description</name>
  <version>0.0.0</version>
  <description>
    URDF Description package for Leo Rover (ERC edition)
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="bugtracker">https://github.com/LeoRover/leo_erc_common/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_erc_common</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>



</package>
