cmake_minimum_required(VERSION 3.5)
project(scout_msgs)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(builtin_interfaces REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/ScoutStatus.msg"
  "msg/ScoutMotorState.msg"
  "msg/ScoutLightState.msg"
  "msg/ScoutLightCmd.msg"
  "msg/ScoutBmsStatus.msg"
  "msg/ScoutDriverState.msg"
  DEPENDENCIES builtin_interfaces
)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()