<?xml version="1.0"?>
<package format="3">
  <name>scout_msgs</name>
  <version>0.3.3</version>
  <description>Messages for AgileX Scout</description>

  <author email="contact@westonrobot.com">TODO</author>
  <maintainer email="contact@westonrobot.com">TODO</maintainer>
  <maintainer email="contact@westonrobot.com">TODO</maintainer>

  <license>BSD</license>

  <url type="website">TODO</url>
  <url type="bugtracker">TODO</url>
  <url type="repository">TODO</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
